--- a/index.html
+++ b/index.html
@@ -4,10 +4,21 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Grant Erdner | Portfolio</title>
-  <link rel="stylesheet" href="styles.css" />
+
+  <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+
+  <!-- Icons -->
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+  />
+
+  <!-- Styles -->
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
+
   <!-- Navigation -->
   <nav class="navbar">
     <div class="nav-container">
@@ -21,55 +32,79 @@
     </div>
   </nav>
 
-  <!-- Hero Section -->
+  <!-- Hero -->
   <section id="home" class="hero">
     <div class="hero-content">
-      <img src="profile.jpg" alt="Grant Erdner" class="profile-pic" />
+      <img src="profile.jpg" alt="Grant Erdner" class="profile-pic">
       <h1>Grant Erdner</h1>
       <p class="tagline">Interdisciplinary Engineer · Product Design · Software</p>
       <a href="#about" class="btn">Learn More</a>
     </div>
   </section>
 
-  <!-- About Section -->
+  <!-- About -->
   <section id="about" class="section">
     <div class="container">
       <h2>About Me</h2>
       <p>
-        I’m an interdisciplinary engineering student at Texas A&M University with a focus on
-        mechanical, electrical, and aerospace systems. I enjoy building products from concept
-        to reality—combining design, manufacturing, and software to solve real-world problems.
+        I’m an interdisciplinary engineering student at Texas A&M University with experience
+        spanning mechanical design, electronics, and software development. I enjoy taking ideas
+        from concept to prototype and building practical, well-designed solutions.
       </p>
       <p>
-        I’ve worked on robotics teams, aerospace projects, and product design efforts, and I’m
-        especially interested in roles that blend hands-on engineering with creative problem-solving.
+        I’m especially interested in product design, manufacturing, and engineering roles that
+        blend hands-on work with creative problem solving.
       </p>
     </div>
   </section>
 
-  <!-- Skills Section -->
+  <!-- Skills -->
   <section id="skills" class="section alt">
     <div class="container">
       <h2>Skills</h2>
+
       <div class="skills-grid">
-        <div class="skill-card">Mechanical Design (CAD)</div>
-        <div class="skill-card">Product Development</div>
-        <div class="skill-card">Manufacturing & Fabrication</div>
-        <div class="skill-card">Python & JavaScript</div>
-        <div class="skill-card">HTML & CSS</div>
-        <div class="skill-card">Embedded & Electronics</div>
+        <div class="skill-card">
+          <i class="fa-solid fa-gear"></i>
+          <span>Mechanical Design (CAD)</span>
+        </div>
+
+        <div class="skill-card">
+          <i class="fa-solid fa-cube"></i>
+          <span>Product Development</span>
+        </div>
+
+        <div class="skill-card">
+          <i class="fa-solid fa-industry"></i>
+          <span>Manufacturing & Fabrication</span>
+        </div>
+
+        <div class="skill-card">
+          <i class="fa-solid fa-code"></i>
+          <span>Python & JavaScript</span>
+        </div>
+
+        <div class="skill-card">
+          <i class="fa-solid fa-laptop-code"></i>
+          <span>HTML & CSS</span>
+        </div>
+
+        <div class="skill-card">
+          <i class="fa-solid fa-microchip"></i>
+          <span>Embedded & Electronics</span>
+        </div>
       </div>
     </div>
   </section>
 
-  <!-- Resume Section -->
+  <!-- Resume -->
   <section id="resume" class="section">
     <div class="container">
       <h2>Resume</h2>
-      <p>
-        Download my resume to learn more about my experience, projects, and leadership roles.
-      </p>
-      <a href="Grant_Erdner_Resume.pdf" class="btn" download>Download Resume</a>
+      <p>Download my resume to see my experience, projects, and leadership roles.</p>
+      <a href="Grant_Erdner_Resume.pdf" class="btn" download>
+        <i class="fa-solid fa-download"></i> Download Resume
+      </a>
     </div>
   </section>
 
@@ -77,5 +112,6 @@
   <footer class="footer">
     <p>© 2026 Grant Erdner. All rights reserved.</p>
   </footer>
+
 </body>
 </html>
